# bouncer_admission_controller

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  README.md
configuration/: bouncer.yaml
example/: ns.yaml  pod-bad.yaml  pod-good.yaml
manifests/: kustomization.yaml
manifests/base/: ns.yaml
manifests/ca/: certificate-ca.yaml  issuer-ca.yaml  issuer-selfsigned.yaml  kustomization.yaml
manifests/controller/: bouncer-validating-webhook.yaml  cert-bouncer.yaml  cm.yaml  deploy.yaml  kustomization.yaml  netpol.yaml  svc.yaml
src/: config.rs  error.rs  http.rs  lib.rs  main.rs  telemetry.rs  utils.rs  validators.rs
