[package]
name = "bouncer"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# TODO: Make rustls a feature
rustls = "0.19.0"
config = { version = "0.11.0", default-features=false, features = ["yaml"] }

actix-rt = "2.2.0"
actix-web = { version = "4.0.0-beta.4", features = ["rustls"] }

uuid = { version = "0.8.2", features = ["v4"] }
serde =  { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"

# kube = { version = "0.55.0", default-features=false, features = ["admission","rustls-tls"] }
k8s-openapi = { version = "0.11.0", default-features=false, features = ["v1_20"] }
kube = { version = "0.55.0", default-features=false, features = ["admission"] }

tracing = "0.1.26"
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.2.18", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.2.4"
tracing-log = "0.1.2"
tracing-actix-web = "0.4.0-beta.4"
thiserror = "1.0.26"

[dev-dependencies]
tokio = "1.8.0"
